Removed unnecessary code

--- a/test-e4/Views/Account/ChangePassword.cshtml
+++ b/test-e4/Views/Account/ChangePassword.cshtml
@@ -23,13 +23,13 @@
 						<i class="ri-mail-fill loginIcon"></i>
 					</div>
 					<div class="loginBox">
-						<input asp-for="NewPassword"  class="loginInput" />
+						<input asp-for="NewPassword" type="password" id="password" class="loginInput" />
 						<label asp-for="NewPassword" class="loginLabel"></label>
 						<i class="ri-eye-off-fill loginIcon loginPassword" id="loginPassword"></i>
 					</div>
 					<span asp-validation-for="NewPassword" class="text-danger"></span>
 					<div class="loginBox">
-						<input asp-for="ConfirmNewPassword"  class="loginInput" />
+						<input asp-for="ConfirmNewPassword" type="password" id="password" class="loginInput" />
 						<label asp-for="ConfirmNewPassword" class="loginLabel"></label>
 						<i class="ri-eye-off-fill loginIcon loginPassword" id="loginPassword"></i>
 					</div>
