--- a/test-e4/Views/Account/Register.cshtml
+++ b/test-e4/Views/Account/Register.cshtml
@@ -31,14 +31,14 @@
 					<span asp-validation-for="Email" class="text-danger"></span>
 
 					<div class="loginBox">
-						<input asp-for="Password" id="password" required placeholder=" " class="loginInput" />
+						<input asp-for="Password" type="password" id="password" required placeholder=" " class="loginInput" />
 						<label asp-for="Password" class="loginLabel"></label>
 						<i class="ri-eye-off-fill loginIcon loginPassword" id="loginPassword"></i>
 					</div>
 					<span asp-validation-for="Password" class="text-danger"></span>
 
 					<div class="loginBox">
-						<input asp-for="ConfirmPassword" id="password" required placeholder=" " class="loginInput" />
+						<input asp-for="ConfirmPassword" type="password" id="password" required placeholder=" " class="loginInput" />
 						<label asp-for="ConfirmPassword" class="loginLabel"></label>
 						<i class="ri-eye-off-fill loginIcon loginPassword" id="loginPassword"></i>
 					</div>
